[gd_scene load_steps=6 format=2]

[ext_resource path="res://Player/stats/Stats.gd" type="Script" id=1]
[ext_resource path="res://Assets/sprites/forms/typeSheet.png" type="Texture" id=2]
[ext_resource path="res://Assets/fonts/pauseOptions.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/fonts/titleOptions.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/GUI/panel.png" type="Texture" id=5]

[node name="stats" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 480.0
margin_bottom = 432.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )
_sections_unfolded = [ "Rect" ]

[node name="playerSprite" type="Sprite" parent="." index="0"]

position = Vector2( 60, 60 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )
_sections_unfolded = [ "Region", "Transform", "Visibility" ]

[node name="knownMovesTitle" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_top = 160.0
margin_right = 100.0
margin_bottom = 180.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.976471, 0.976471, 0.976471, 1 )
text = "Known Moves"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "custom_colors" ]

[node name="lvlLabel" type="Label" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_top = 120.0
margin_right = 96.0
margin_bottom = 152.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.976471, 0.976471, 0.976471, 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Rect", "custom_colors", "custom_fonts" ]

[node name="statsContainer" type="MarginContainer" parent="." index="3"]

editor/display_folded = true
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -240.0
margin_top = 16.0
margin_bottom = 240.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Margin", "Rect", "custom_constants" ]

[node name="statHBox" type="HBoxContainer" parent="statsContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 240.0
margin_bottom = 224.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="labels" type="VBoxContainer" parent="statsContainer/statHBox" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 30.0
margin_bottom = 136.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
alignment = 0
_sections_unfolded = [ "Anchor", "Rect" ]

[node name="hp" type="Label" parent="statsContainer/statHBox/labels" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 20.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.976471, 0.976471, 0.976471, 1 )
text = "HP"
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="defense" type="Label" parent="statsContainer/statHBox/labels" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 28.0
margin_right = 30.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.976471, 0.976471, 0.976471, 1 )
text = "DEF"
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="speed" type="Label" parent="statsContainer/statHBox/labels" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 56.0
margin_right = 30.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.976471, 0.976471, 0.976471, 1 )
text = "SPD"
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="strength" type="Label" parent="statsContainer/statHBox/labels" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 84.0
margin_right = 28.0
margin_bottom = 108.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.976471, 0.976471, 0.976471, 1 )
text = "STR"
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="xp" type="Label" parent="statsContainer/statHBox/labels" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 112.0
margin_right = 20.0
margin_bottom = 136.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.976471, 0.976471, 0.976471, 1 )
text = "XP"
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="values" type="VBoxContainer" parent="statsContainer/statHBox" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 118.0
margin_right = 128.0
margin_bottom = 136.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
alignment = 0
_sections_unfolded = [ "Margin", "Rect" ]

[node name="hp" type="Label" parent="statsContainer/statHBox/values" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 10.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.976471, 0.976471, 0.976471, 1 )
text = "5"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Rect", "custom_colors", "custom_fonts" ]

[node name="defense" type="Label" parent="statsContainer/statHBox/values" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 28.0
margin_right = 10.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.976471, 0.976471, 0.976471, 1 )
text = "5"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="speed" type="Label" parent="statsContainer/statHBox/values" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 56.0
margin_right = 10.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.976471, 0.976471, 0.976471, 1 )
text = "5"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="strength" type="Label" parent="statsContainer/statHBox/values" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 84.0
margin_right = 10.0
margin_bottom = 108.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.976471, 0.976471, 0.976471, 1 )
text = "5"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="xp" type="Label" parent="statsContainer/statHBox/values" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 112.0
margin_right = 10.0
margin_bottom = 136.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.976471, 0.976471, 0.976471, 1 )
text = "5"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="movesContainer" type="MarginContainer" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_top = 240.0
margin_right = 480.0
margin_bottom = 432.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Margin", "Rect" ]

[node name="knownMoves" type="VBoxContainer" parent="movesContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 8.0
margin_bottom = 108.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
alignment = 0

[node name="move1" type="Label" parent="movesContainer/knownMoves" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.976471, 0.976471, 0.976471, 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="move2" type="Label" parent="movesContainer/knownMoves" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 28.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.976471, 0.976471, 0.976471, 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="move3" type="Label" parent="movesContainer/knownMoves" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 56.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.976471, 0.976471, 0.976471, 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="move4" type="Label" parent="movesContainer/knownMoves" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 84.0
margin_bottom = 108.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.976471, 0.976471, 0.976471, 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="NinePatchRect" type="NinePatchRect" parent="." index="5"]

show_behind_parent = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
_sections_unfolded = [ "Patch Margin", "Visibility" ]


